@@ -149,7 +149,7 @@
 		      <property name="can_focus">True</property>
 		      <property name="editable">False</property>
 		      <property name="overwrite">False</property>
-		      <property name="accepts_tab">True</property>
+		      <property name="accepts_tab">False</property>
 		      <property name="justification">GTK_JUSTIFY_LEFT</property>
 		      <property name="wrap_mode">GTK_WRAP_WORD</property>
 		      <property name="cursor_visible">False</property>
